public class Customer {
    private String name;
    private String nik;

    public Customer(String name, String nik) {
        this.name = name;
        this.nik = nik;
    }

    public String getName() {
        return name;
    }

}